--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Bin Butler Proof Upload</h1>
+  <div class="container">
+    <h1>Bin Butler Proof Upload</h1>
 
-  <label for="email">Customer Email:</label><br>
-  <input type="email" id="email" placeholder="example@email.com"><br><br>
+    <label for="email">Customer Email:</label>
+    <input type="email" id="email" placeholder="example@email.com">
 
-  <label for="photoInput">Take Photo:</label><br>
-  <input type="file" accept="image/*" capture="camera" id="photoInput"><br><br>
+    <label for="photoInput">Take Photo:</label>
+    <input type="file" accept="image/*" capture="camera" id="photoInput">
 
-  <img id="preview" class="preview" alt="Preview will appear here"><br>
+    <img id="preview" class="preview" alt="Preview will appear here">
 
-  <p id="gps">GPS: (waiting...)</p>
-  <p id="timestamp"></p>
+    <p id="gps">GPS: (waiting...)</p>
+    <p id="timestamp"></p>
 
-  <button id="sendBtn">Send Proof</button>
+    <button id="sendBtn">Send Proof</button>
+  </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
