--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button id="sendBtn">Send Proof</button>
   </div>
 
-  <script src="script.js"></script>
+  <script src="scirpt.js"></script>
 </body>
 </html>
 
