Updates from before

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bin Butler Proof Upload</h1>
+    <h1>Bin Butler Photos</h1>
 
     <label for="email">Customer Email:</label>
     <input type="email" id="email" placeholder="example@email.com">
