--- a/index.html
+++ b/index.html
@@ -3,28 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bin Butler - Worker Proof</title>
+  <title>BinButler Worker Proof</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Bin Butler Photos</h1>
+    <h1>BinButler Worker Proof</h1>
 
+    <!-- Email -->
     <label for="email">Customer Email:</label>
-    <input type="email" id="email" placeholder="example@email.com">
+    <input type="email" id="email" placeholder="Enter customer email">
 
-    <label for="photoInput">Take Photo:</label>
-    <input type="file" accept="image/*" capture="camera" id="photoInput">
+    <!-- Address -->
+    <label for="address">Customer Address:</label>
+    <input type="text" id="address" placeholder="Enter customer address">
 
-    <img id="preview" class="preview" alt="Preview will appear here">
+    <!-- Photo Upload -->
+    <label for="photoInput">Upload Photo Proof:</label>
+    <input type="file" id="photoInput" accept="image/*" capture="environment">
+    <img id="preview" alt="Preview will appear here">
 
-    <p id="gps">GPS: (waiting...)</p>
-    <p id="timestamp"></p>
+    <!-- GPS + Time -->
+    <p id="gps">GPS: Loading...</p>
+    <p id="timestamp">Time: --</p>
 
+    <!-- Button -->
     <button id="sendBtn">Send Proof</button>
   </div>
 
-  <script src="scirpt.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
-
