--- a/index.html
+++ b/index.html
@@ -11,29 +11,39 @@
     <h1>BinButler Proof Capture</h1>
     <p class="subtitle">Submit photo proof or explain why pickup was skipped.</p>
 
-    <!-- Email -->
-    <label for="email">Customer Email</label>
-    <input type="email" id="email" placeholder="Enter customer email" required>
+    <form id="proofForm">
+      <!-- Customer Dropdown -->
+      <label for="customer">Select Customer</label>
+      <select id="customer" required>
+        <option value="">-- Select --</option>
+        <option value="john@example.com" data-address="123 Main St">123 Main St</option>
+        <option value="sarah@example.com" data-address="456 Oak Ave">456 Oak Ave</option>
+        <option value="mike@example.com" data-address="789 Pine Rd">789 Pine Rd</option>
+      </select>
 
-    <!-- Address -->
-    <label for="address">Customer Address</label>
-    <input type="text" id="address" placeholder="Enter customer address" required>
+      <!-- Address auto-filled -->
+      <label for="address">Customer Address</label>
+      <input type="text" id="address" readonly>
 
-    <!-- Photo Upload -->
-    <label for="photoInput">Upload Photo Proof</label>
-    <input type="file" id="photoInput" accept="image/*" capture="environment">
-    <img id="preview" alt="Preview will appear here">
+      <!-- Photo Upload -->
+      <label for="photo">Upload Photo Proof</label>
+      <input type="file" id="photo" accept="image/*" capture="environment">
+      <img id="preview" alt="Preview will appear here">
 
-    <!-- Skip Reason -->
-    <label for="skipReason">Skip Reason (optional)</label>
-    <textarea id="skipReason" placeholder="Explain why pickup was skipped..."></textarea>
+      <!-- Skip Reason -->
+      <label for="reason">Skip Reason (optional)</label>
+      <textarea id="reason" placeholder="Explain why pickup was skipped..."></textarea>
 
-    <!-- GPS + Time -->
-    <p id="gps">GPS: Loading...</p>
-    <p id="timestamp">Time: --</p>
+      <!-- GPS + Time -->
+      <p id="gps">GPS: Loading...</p>
+      <p id="timestamp">Time: --</p>
 
-    <!-- Button -->
-    <button id="sendBtn">Send Proof</button>
+      <!-- Submit Button -->
+      <button type="submit">Send Proof</button>
+    </form>
+
+    <!-- Toast Popup -->
+    <div id="toast"></div>
   </div>
 
   <script src="script.js"></script>
