--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BinButler Worker Proof</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
@@ -12,18 +12,18 @@
     <p class="subtitle">Submit photo proof or explain why pickup was skipped.</p>
 
     <form id="proofForm">
-      <!-- Customer Dropdown -->
-      <label for="customer">Select Customer</label>
-      <select id="customer" required>
-        <option value="">-- Select --</option>
-        <option value="john@example.com" data-address="123 Main St">123 Main St</option>
-        <option value="sarah@example.com" data-address="456 Oak Ave">456 Oak Ave</option>
-        <option value="mike@example.com" data-address="789 Pine Rd">789 Pine Rd</option>
-      </select>
+      <!-- Customer Name -->
+      <label for="customerName">Customer Name</label>
+      <input type="text" id="customerName" placeholder="Start typing name..." autocomplete="off" required>
+      <div id="suggestions" class="suggestions-box"></div>
 
-      <!-- Address auto-filled -->
+      <!-- Address -->
       <label for="address">Customer Address</label>
-      <input type="text" id="address" readonly>
+      <input type="text" id="address" placeholder="Auto-filled..." readonly required>
+
+      <!-- Email -->
+      <label for="email">Customer Email</label>
+      <input type="email" id="email" placeholder="Auto-filled..." readonly required>
 
       <!-- Photo Upload -->
       <label for="photo">Upload Photo Proof</label>
@@ -40,12 +40,13 @@
 
       <!-- Submit Button -->
       <button type="submit">Send Proof</button>
-    </form>
 
-    <!-- Toast Popup -->
-    <div id="toast"></div>
+      <!-- Success / Fail Popup -->
+      <div id="popup" class="popup"></div>
+    </form>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
