--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
     <p class="subtitle">Submit photo proof or explain why pickup was skipped.</p>
 
     <form id="proofForm">
-      <!-- Customer Name -->
-      <label for="customerName">Customer Name</label>
-      <input type="text" id="customerName" placeholder="Start typing name..." autocomplete="off" required>
-      <div id="suggestions" class="suggestions-box"></div>
-
       <!-- Address -->
       <label for="address">Customer Address</label>
-      <input type="text" id="address" placeholder="Auto-filled..." readonly required>
+      <input list="addressList" id="address" placeholder="Enter customer address..." required>
+      <datalist id="addressList"></datalist>
 
       <!-- Email -->
       <label for="email">Customer Email</label>
@@ -49,4 +45,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
