--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
       <!-- Email -->
       <label for="email">Customer Email</label>
-      <input type="email" id="email" placeholder="Auto-filled..." readonly required>
+      <input type="email" id="email" placeholder="Customer email">
+
 
       <!-- Photo Upload -->
       <label for="photo">Upload Photo Proof</label>
