--- a/index.html
+++ b/index.html
@@ -7,19 +7,33 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Bin Butler Proof Form</h1>
-  <form id="proofForm">
-    <input type="text" id="address" placeholder="Enter customer address" autocomplete="off">
-    <input type="email" id="email" placeholder="Customer email">
-    <input type="file" id="photo" accept="image/*">
-    <img id="preview" src="" alt="Photo preview">
-    <textarea id="reason" placeholder="Skip reason (optional)"></textarea>
-    <div id="gps">GPS: not available</div>
-    <div id="timestamp">Time: </div>
-    <button type="submit">Send Proof</button>
-  </form>
-  <div id="popup"></div>
-  
+  <div class="container">
+    <h1>Bin Butler Proof Form</h1>
+    <p class="subtitle">Fill address, upload photo or reason, send proof</p>
+    <form id="proofForm">
+      <label for="address">Address</label>
+      <input type="text" id="address" placeholder="Enter customer address" autocomplete="off">
+
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Customer email">
+
+      <label for="photo">Photo (optional)</label>
+      <input type="file" id="photo" accept="image/*">
+      <img id="preview" src="" alt="Photo preview">
+
+      <label for="reason">Skip Reason (optional)</label>
+      <textarea id="reason" placeholder="Reason if skipped"></textarea>
+
+      <div id="gps">GPS: not available</div>
+      <div id="timestamp">Time: </div>
+
+      <button type="submit">Send Proof</button>
+    </form>
+  </div>
+
+  <div class="popup" id="popup"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
+
