--- a/index.html
+++ b/index.html
@@ -3,37 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bin Butler Proof Form</title>
+  <title>Bin Butler Proof</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Bin Butler Proof Form</h1>
-    <p class="subtitle">Fill address, upload photo or reason, send proof</p>
-    <form id="proofForm">
-      <label for="address">Address</label>
-      <input type="text" id="address" placeholder="Enter customer address" autocomplete="off">
+    <h1>Bin Butler Proof</h1>
+    <p class="subtitle">Submit pickup details</p>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Customer email">
+    <label for="address">Address</label>
+    <input type="text" id="address" placeholder="Customer address">
 
-      <label for="photo">Photo (optional)</label>
-      <input type="file" id="photo" accept="image/*">
-      <img id="preview" src="" alt="Photo preview">
+    <label for="email">Email</label>
+    <input type="email" id="email" placeholder="Customer email">
 
-      <label for="reason">Skip Reason (optional)</label>
-      <textarea id="reason" placeholder="Reason if skipped"></textarea>
+    <label for="reason">Reason / Status</label>
+    <textarea id="reason" placeholder="Pickup completed, bin not out, etc."></textarea>
 
-      <div id="gps">GPS: not available</div>
-      <div id="timestamp">Time: </div>
+    <label for="photo">Upload Proof Photo</label>
+    <input type="file" id="photo" accept="image/*">
+    <img id="preview" alt="Preview will show here">
 
-      <button type="submit">Send Proof</button>
-    </form>
+    <p id="gps">GPS: Not captured yet</p>
+    <p id="timestamp">Time: Not captured yet</p>
+
+    <button id="submitBtn">Submit Proof</button>
   </div>
 
-  <div class="popup" id="popup"></div>
+  <div class="popup" id="popup">Submitted successfully!</div>
 
   <script src="script.js"></script>
 </body>
 </html>
-
