--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <p class="subtitle">Submit pickup details</p>
 
     <label for="address">Address</label>
-    <input type="text" id="address" placeholder="Customer address">
+    <input type="text" id="address" placeholder="Enter Customer address">
 
     <label for="email">Email</label>
-    <input type="email" id="email" placeholder="Customer email">
+    <input type="email" id="email" placeholder="Enter Customer email">
 
     <label for="reason">Reason / Status</label>
     <textarea id="reason" placeholder="Pickup completed, bin not out, etc."></textarea>
