--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 
   <div class="popup" id="popup">Submitted successfully!</div>
 
-  <script src="script.js"></script>
+  <script src="scirpt.js"></script>
 </body>
 </html>
